# Raspi-ImageProcessing

./: .Vec2.cpp.swp  .Vec2.h.swp  .Vec3.cpp.swp  .Vec3.h.swp  .gitignore  .main.cpp.swm  .main.cpp.swn  .main.cpp.swo  .main.cpp.swp  .main_old.cpp.swo  .main_old.cpp.swp  BinMap.cpp  BinMap.h  CMakeLists.txt  ColorTracker.cpp  ColorTracker.h  Flooder.cpp  ImgFunc.cpp  ImgFunc.h  LICENSE  README.md  Timings  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  build.sh  main.cpp  raspicamConfig.cmake
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  objectTracking
desktop/: CMakeLists.txt  CoordinateConverter.cpp  CoordinateConverter.h  Performance.cpp  Performance.h  Pool.cpp  Pool.h  Selector.h  TestMain.cpp  Tracker.cpp  Tracker.h  config.h  main.cpp  objectTracking  poolConfig.h  poolMain.cpp
desktop/data/: fisheye0.txt
raspi/: CMakeLists.txt  main.cpp  main_old.cpp
raspi/debug/: cmake.sh
tracking/: Array2d.h  ColorTracker.cpp  ColorTracker.h  Flooder.cpp  Flooder.h  ImgFunc.cpp  ImgFunc.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
